--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 <html lang="en" data-bs-theme="auto">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YT69KZ91W7"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3CRTJRZ551"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-YT69KZ91W7');
+      gtag('config', 'G-3CRTJRZ551');
     </script>
     <script src="./assets/js/color-modes.js"></script>
     <meta charset="utf-8">
@@ -17,6 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-96x96.png">
     <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- Owl Carousel CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -27,7 +28,7 @@
     <!-- Owl Carousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script type="application/ld+json">
+    <!-- <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "ProfilePage",
@@ -66,7 +67,7 @@
           "author": { "@id": "nickmccarty" }
         }]
       }
-      </script>
+      </script> -->
   </head>
   <body>
     <div class="container-fluid p-0" style="overflow: hidden;">
@@ -127,23 +128,23 @@
                   <!-- <a class="nav-item nav-link" href="./contact.html" style="text-decoration: none; text-decoration-color: none;"> -->
                     <h4 class="gradient">Contact</h4>
                   <!-- </a> -->
-                  <div style="padding-left: 5px">
-                    <a href="https://linkedin.com/in/nicholasmccarty" class="text-auto" style="text-decoration: none;">
+                  <div>
+                    <a href="https://linkedin.com/company/upskilled-consulting" class="text-auto" style="text-decoration: none;">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                         <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401m-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4"/>
                       </svg>
                     </a>
-                    <a href="https://github.com/nickmccarty" class="text-auto" style="text-decoration: none;">
+                    <a href="https://github.com/upskilled-consulting" class="text-auto" style="text-decoration: none;">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
                       </svg>
                     </a>
-                    <a href="mailto:nickmccarty0@gmail.com" class="text-auto" style="text-decoration: none;">
+                    <a href="mailto:get@upskilled.consulting" class="text-auto" style="text-decoration: none;">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                         <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
                       </svg>
                     </a>
-                    <a href="https://discord.com/invite/NbQ9ucMjzd">
+                    <a href="https://discord.com/invite/CJpWjTJ7Uk">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-discord" viewBox="0 0 16 16">
                             <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
                         </svg>
@@ -181,8 +182,8 @@
       <main>
           <section class="text-center">
             <!-- <div class="row"> -->
-              <div id="jumbotron-container" class="jumbotron text-center bg-image" style="background-image: url(https://res.cloudinary.com/da8kzrluj/image/upload/f_auto,q_auto/tggbhsubdfpnwwizrwb4); border-radius: 0 0 50% 50%; height: 10em;">
-                  <h1 class="display-4" style="color: lightcyan; padding-top: 40px; text-shadow: 1px 1px 1px #000, 1px 1px 1px #000, 1px 1px 1px #000, 1px 1px 1px #000;"><span id="typed-text"></span></h1>
+              <div id="jumbotron-container" class="jumbotron text-center bg-image" style="background-image: url(./assets/images/green-mesh-background.png); border-radius: 0 0 50% 50%; height: 10em;">
+                <h1 class="display-4" style="color: lightcyan; padding-top: 40px; text-shadow: 1px 1px 1px #000, 1px 1px 1px #000, 1px 1px 1px #000, 1px 1px 1px #000;"><span id="typed-text"></span></h1>
                   <!-- <p class="lead" style="color: lightcyan;">Let's build something cool together!</p> -->
               </div>
             <!-- </div> -->
@@ -192,7 +193,7 @@
           <div class="jumbotron-container mt-4" style="padding-top: 30px; background-color: white;">
             <div class="row">
                 <div class="col-md-12">
-                  <h2 class="text-center gradient" style="padding-bottom: 2px;">Organizations I've Served</h2>
+                  <!-- <h2 class="text-center gradient" style="padding-bottom: 2px;">Organizations I've Served</h2> -->
                   <br>
                   <br>
                     <div class="owl-carousel owl-theme">
@@ -237,39 +238,48 @@
             <div class="row">
               <div class="col">
                 <div class="jumbotron">
-                  <h1 class="display-4 text-center gradient">Hi! I'm Nick&#128075;&#127997;</h1>
-                  <div class="row" style="padding-top: 10px;">
+                  <h1 class="display-4 text-center gradient">Get Upskilled. Bridge Gaps. Increase Impact.</h1>
+                  <div class="row" style="padding-top: 40px;">
                     <div class="col-sm-3 text-center">
-                      <img class="rounded-circle img-thumbnail mb-5 shadow-lg" alt="avatar" src="./assets/images/avatar.jpg" style="width: 200px;"/>
+                      <img class="rounded-circle img-thumbnail mb-5" alt="avatar" src="./assets/images/upskilled-logo.jpg" style="width: 200px;"/>
                     </div>
                     <div class="col-sm-9 d-flex flex-column justify-content-center">
                       <p class="lead mb-4">
-                        I've spent the last 7 years working diligently to increase my acumen in a number of key areas, including:
+                        We are a network of designers, data practitioners, devs, and trainers with a passion for helping individuals, small businesses, and nonprofits increase their impact.  
+                        We've spent years working diligently to increase our acumen in a number of key areas, and we believe in leading with value, so we offer free training in the following areas:
                         <ul>
                           <li>
-                            Data Analytics/Science
+                            Web Scraping/Advanced Data Collection and Storage Techniques
                           </li>
                           <li>
-                            Machine Learning (ML) & Artificial Intelligence (AI)
+                            Multimodal Generative AI
+                              <ul>
+                                <li>
+                                  Text-to-Image
+                                </li>
+                                <li>
+                                  Image-to-Text
+                                </li>
+                                <li>
+                                  Text-to-Video
+                                </li>
+                                <li>
+                                  Text-to-Speech
+                                </li>
+                                <li>
+                                  Speech-to-Text
+                                </li>
+                              </ul>
                           </li>
-                            <ul>
-                              <li>
-                                Natural Language Processing (NLP)
-                              </li>
-                              <li>
-                                Computer Vision
-                              </li>
-                              <li>
-                                Generative AI
-                              </li>
-                            </ul>
                           <li>
-                            Web Development
+                            LLM-Driven App Development and Deployment
                           </li>
                         </ul>
                       </p>  
-                      <p class="lead">In practice, these years have been spent consulting, teaching, building ML/AI-driven applications,
-                        and learning -- lots and lots of learning! &#x1f913;
+                      <p class="lead">
+                        As we mentioned, we practice leading with value, so we offer training for free to whomever wants it. We do offer customized training services as well, for a fee, upon request.
+                        Our ultimate goal, however, is to get to know you, your goals, and your challenges so that we may offer consulting services tailored to your use case; we want you to grow and maximize
+                        your impact so that we may have the highest potential of building something amazing together.
                       </p>
                     </div>
                     <p class="lead text-center mt-4 mb-5">
@@ -287,32 +297,37 @@
           </div>
       </main>
       <footer id = "footer" class="jumbotron-fluid"></footer>
-      <p class="text-center mt-3 gradient">Made with <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+      <p class="text-center mt-3 gradient">Made with <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart gradient" viewBox="0 0 16 16">
         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
-      </svg> and <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code" viewBox="0 0 16 16">
+      </svg> and <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code gradient" viewBox="0 0 16 16">
         <path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"/>
-      </svg> by Nick McCarty</p>
+      </svg> by Upskilled Consulting, LLC
+      <br>
+      All rights reserved &copy; 2024
       <div class="text-center mb-3">
-        <a href="https://linkedin.com/in/nicholasmccarty" class="text-auto" style="text-decoration: none;">
+        <a href="https://linkedin.com/company/upskilled-consulting" class="text-auto" style="text-decoration: none;">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
             <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401m-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4"/>
           </svg>
         </a>
-        <a href="https://github.com/nickmccarty" class="text-auto" style="text-decoration: none;">
+        <a href="https://github.com/upskilled-consulting" class="text-auto" style="text-decoration: none;">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
           </svg>
         </a>
-        <a href="mailto:nickmccarty0@gmail.com" class="text-auto" style="text-decoration: none;">
+        <a href="mailto:get@upskilled.consulting" class="text-auto" style="text-decoration: none;">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
             <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
           </svg>
         </a>
-        <a href="https://discord.com/invite/NbQ9ucMjzd">
+        <a href="https://discord.com/invite/CJpWjTJ7Uk">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-discord" viewBox="0 0 16 16">
               <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
           </svg>
         </a>
+        <div class="text-center m-4">
+          <iframe id = "substack-embed" src="https://upskilled.substack.com/embed" width="480" height="150" style="border:3px solid black; background: black; box-shadow: 5px 5px #141414" frameborder="0" scrolling="no"></iframe>
+        </div>
       </div>
     </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
